--- a/Cliente/Tareas/tarea3/ejercicio4/empleados.html
+++ b/Cliente/Tareas/tarea3/ejercicio4/empleados.html
@@ -7,49 +7,8 @@
     <script>
         var listaFisio = [];
         var listaMonitores = [];
-        var exDni = /^[0-9]{8}[A-Z]{1}$/i;
-        var exTel = /\d{9}/;
-
-        function crearFisio() {
-            var contador = 0;
-            var nombre = prompt("Introduce el nombre");
-            var dni;
-            do {
-                dni = prompt("Introduce el dni");
-            } while (!exDni.test(dni));
-            var telefono;
-            //do{
-            telefono = prompt("Introduce el telefono");
-            //}while(!exDni.test(telefono));
-            var fisio = new Fisio(nombre, dni, telefono);
-            listaFisio.push(fisio);
-        }
-
-        function crearMonitor() {
-            var nombre = prompt("Introduce el nombre");
-            var dni;
-            do {
-                dni = prompt("Introduce el dni");
-            } while (!exDni.test(dni));
-            var telefono;
-            //do{
-            telefono = prompt("Introduce el telefono");
-            //}while(!exDni.test(telefono));
-            var monitor = new Fisio(nombre, dni, telefono);
-            listaMonitores.push(monitor);
-        }
-
-        function listarFisio() {
-            listaFisio.forEach(element => {
-                alert(listaFisio[i].nombre + " " + listaFisio[i].dni + " " + listaFisio[i].telefono);
-            });
-        }
-
-        function listarMonitor() {
-            listaMonitor.forEach(element => {
-                alert(listaMonitor[i].nombre + " " + listaMonitor[i].dni + " " + listaMonitor[i].telefono);
-            })
-        }
+        var ptrDni = /^[0-9]{8}[A-Z]{1}$/i;
+        var ptrTel = /\d{9}/;
 
         class Empleado {
             constructor(nombre, dni, telefono) {
@@ -70,6 +29,48 @@
                 super(nombre, dni, telefono);
             }
         }
+
+        function crearFisio() {
+            var contador = 0;
+            var nombre = prompt("Introduce el nombre");
+            var dni;
+            do {
+                dni = prompt("Introduce el dni");
+            } while (!ptrDni.test(dni));
+            var telefono;
+            //do{
+            telefono = prompt("Introduce el telefono");
+            //}while(!ptrDni.test(telefono));
+            var fisio = new Fisio(nombre, dni, telefono);
+            listaFisio.push(fisio);
+        }
+
+        function crearMonitor() {
+            var nombre = prompt("Introduce el nombre");
+            var dni;
+            do {
+                dni = prompt("Introduce el dni");
+            } while (!ptrDni.test(dni));
+            var telefono;
+            //do{
+            telefono = prompt("Introduce el telefono");
+            //}while(!ptrDni.test(telefono));
+            var monitor = new Fisio(nombre, dni, telefono);
+            listaMonitores.push(monitor);
+        }
+
+        function listarFisio() {
+            listaFisio.forEach(element => {
+                alert(element.nombre + " " + element.dni + " " + element.telefono);
+            });
+        }
+
+        function listarMonitor() {
+            listaMonitor.forEach(element => {
+                alert(element.nombre + " " + element.dni + " " + element.telefono);
+            })
+        }
+
     </script>
 </head>
 
