--- a/Gimnasio/html/actividadSala.html
+++ b/Gimnasio/html/actividadSala.html
@@ -17,35 +17,29 @@
             <div id="nombreGim">
                 <h1>MUSCLE UP</h1>
             </div>
-
+        </div>
+        <div id="logNav">
+            <div id="login">
+                <a href="login.html"> <img src="../recursos/zapatilaGim.PNG" alt="LOGIN"> LOGIN</a>
+            </div>
+            <nav>
+                <ul id="navPrin">
+                    <li> <a href="../html/home.html">Home</a> </li>
+                    <li>Herramientas
+                        <ul id="navTools">
+                            <li><a href="../html/imcCalculadora.html">IMC</a></li>
+                            <li><a href="../html/fcmCalculadora.html">FCM</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="fisioterapeuta.html">Fisios</a></li>
+                    <li><a href="actividadSala.html">Actividades</a></li>
+                    <li><a href="">Galería</a></li>
+                </ul>
+            </nav>
         </div>
     </header>
-
-    <div id="logNav">
-        <div id="login">
-            <a href="login.html"> <img src="../recursos/zapatilaGim.PNG" alt="LOGIN"> LOGIN</a>
-
-        </div>
-        <nav>
-            <ul id="navPrin">
-                <li> <a href="../html/home.html">Home</a> </li>
-                <li>Herramientas
-                    <ul id="navTools">
-                        <li><a href="../html/imcCalculadora.html">IMC</a></li>
-                        <li><a href="../html/fcmCalculadora.html">FCM</a></li>
-                    </ul>
-                </li>
-                <li><a href="fisioterapeuta.html">Fisios</a></li>
-                <li><a href="actividadSala.html">Actividades</a></li>
-            </ul>
-        </nav>
-    </div>
     <hr>
-    <a id="back_to_top" class="right on" href="#header">
-        <span class="fa-stack">
-            <span class="arrow_carrot-up"></span>
-        </span>
-    </a>
+
 
 
     <div>
