--- a/Gimnasio/html/home.html
+++ b/Gimnasio/html/home.html
@@ -19,37 +19,31 @@
             <div id="nombreGim">
                 <h1>MUSCLE UP</h1>
             </div>
-
+        </div>
+        <div id="logNav">
+            <div id="login">
+                <a href="login.html"> <img src="../recursos/zapatilaGim.PNG" alt="LOGIN"> LOGIN</a>
+            </div>
+            <nav>
+                <ul id="navPrin">
+                    <li> <a href="../html/home.html">Home</a> </li>
+                    <li>Herramientas
+                        <ul id="navTools">
+                            <li><a href="../html/imcCalculadora.html">IMC</a></li>
+                            <li><a href="../html/fcmCalculadora.html">FCM</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="fisioterapeuta.html">Fisios</a></li>
+                    <li><a href="actividadSala.html">Actividades</a></li>
+                    <li><a href="">Galería</a></li>
+                </ul>
+            </nav>
         </div>
     </header>
 
-    <div id="logNav">
-        <div id="login">
-            <a href="login.html"> <img src="../recursos/zapatilaGim.PNG" alt="LOGIN"> LOGIN</a>
+    <aside>
 
-        </div>
-        <nav>
-            <ul id="navPrin">
-                <li> <a href="../html/home.html">Home</a> </li>
-                <li>Herramientas
-                    <ul id="navTools">
-                        <li><a href="../html/imcCalculadora.html">IMC</a></li>
-                        <li><a href="../html/fcmCalculadora.html">FCM</a></li>
-                    </ul>
-                </li>
-                <li><a href="fisioterapeuta.html">Fisios</a></li>
-                <li><a href="actividadSala.html">Actividades</a></li>
-                <li><a href="">Galería</a></li>
-            </ul>
-        </nav>
-    </div>
-    <hr>
-    <a id="back_to_top" class="right on" href="#header">
-        <span class="fa-stack">
-            <span class="arrow_carrot-up"></span>
-        </span>
-    </a>
-
+    </aside>
 
     <section>
 
@@ -77,8 +71,7 @@
             <img src="../recursos/icono/logotipo-brazo-de-gimnasio2.png" alt="Mozilla">
             <p>Muscle Up</p>
             <p>Privacy policy</p>
-            <p>Portion of this content are &copy; 2010 by individual drumbeat.org contributors. Content available under
-                a <span>Creative Commons license</span>.</p>
+            <p>Portion of this content are &copy; 2010 by individual drumbeat.org contributors. Content available under a <span>Creative Commons license</span>.</p>
         </div>
 
 
