--- a/Gimnasio/html/fcmCalculadora.html
+++ b/Gimnasio/html/fcmCalculadora.html
@@ -19,37 +19,34 @@
             <div id="nombreGim">
                 <h1>MUSCLE UP</h1>
             </div>
-
+        </div>
+        <div id="logNav">
+            <div id="login">
+                <a href="login.html"> <img src="../recursos/zapatilaGim.PNG" alt="LOGIN"> LOGIN</a>
+            </div>
+            <nav>
+                <ul id="navPrin">
+                    <li> <a href="../html/home.html">Home</a> </li>
+                    <li>Herramientas
+                        <ul id="navTools">
+                            <li><a href="../html/imcCalculadora.html">IMC</a></li>
+                            <li><a href="../html/fcmCalculadora.html">FCM</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="fisioterapeuta.html">Fisios</a></li>
+                    <li><a href="actividadSala.html">Actividades</a></li>
+                    <li><a href="">Galería</a></li>
+                </ul>
+            </nav>
         </div>
     </header>
-
-    <div id="logNav">
-        <div id="login">
-            <a href="login.html"> <img src="../recursos/zapatilaGim.PNG" alt="LOGIN"> LOGIN</a>
-
-        </div>
-        <nav>
-            <ul id="navPrin">
-                <li> <a href="../html/home.html">Home</a> </li>
-                <li>Herramientas
-                    <ul id="navTools">
-                        <li><a href="../html/imcCalculadora.html">IMC</a></li>
-                        <li><a href="../html/fcmCalculadora.html">FCM</a></li>
-                    </ul>
-                </li>
-                <li><a href="fisioterapeuta.html">Fisios</a></li>
-                <li><a href="actividadSala.html">Actividades</a></li>
-            </ul>
-        </nav>
-    </div>
     <hr>
-    <a id="back_to_top" class="right on" href="#header">
-        <span class="fa-stack">
-            <span class="arrow_carrot-up"></span>
-        </span>
-    </a>
+    
+    <aside>
 
-    <div>
+    </aside>
+
+    <section>
         <h1>Calculadora de FCM</h1>
         <form action="./fcm.js">
             <label>Edad: </label><input type="number" id="edad" value=""><br>
@@ -68,7 +65,7 @@
             <li>Zona de anaeróbica (80% - 90%) <span id="3"></span></li>
             <li>Línea roja (90% - 100%) <span id="4"></span></li>
         </ul>
-    </div>
+    </section>
 
 
     <footer>
