--- a/Gimnasio/html/galeria.html
+++ b/Gimnasio/html/galeria.html
@@ -46,6 +46,18 @@
 
     <section>
 
+        <div id="fotoGaleria">
+            <div clas="galeria"></div>
+            <div clas="galeria"></div>
+            <div clas="galeria"></div>
+            <div clas="galeria"></div>
+            <div clas="galeria"></div>
+            <div clas="galeria"></div>
+            <div clas="galeria"></div>
+            <div clas="galeria"></div>
+            <div clas="galeria"></div>
+            <div clas="galeria"></div>
+        </div>
 
 
 
