--- a/Gimnasio/html/login.html
+++ b/Gimnasio/html/login.html
@@ -21,69 +21,68 @@
             <div id="nombreGim">
                 <h1>MUSCLE UP</h1>
             </div>
-
+        </div>
+        <div id="logNav">
+            <div id="login">
+                <a href="login.html"> <img src="../recursos/zapatilaGim.PNG" alt="LOGIN"> LOGIN</a>
+            </div>
+            <nav>
+                <ul id="navPrin">
+                    <li> <a href="../html/home.html">Home</a> </li>
+                    <li>Herramientas
+                        <ul id="navTools">
+                            <li><a href="../html/imcCalculadora.html">IMC</a></li>
+                            <li><a href="../html/fcmCalculadora.html">FCM</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="fisioterapeuta.html">Fisios</a></li>
+                    <li><a href="actividadSala.html">Actividades</a></li>
+                    <li><a href="">Galería</a></li>
+                </ul>
+            </nav>
         </div>
     </header>
-
-    <div id="logNav">
-        <div id="login">
-            <a href="login.html"> <img src="../recursos/zapatilaGim.PNG" alt="LOGIN"> LOGIN</a>
-
-        </div>
-        <nav>
-            <ul id="navPrin">
-                <li> <a href="../html/home.html">Home</a> </li>
-                <li>Herramientas
-                    <ul id="navTools">
-                        <li><a href="../html/imcCalculadora.html">IMC</a></li>
-                        <li><a href="../html/fcmCalculadora.html">FCM</a></li>
-                    </ul>
-                </li>
-                <li><a href="fisioterapeuta.html">Fisios</a></li>
-                <li><a href="actividadSala.html">Actividades</a></li>
-            </ul>
-        </nav>
-    </div>
     <hr>
-    <a id="back_to_top" class="right on" href="#header">
-        <span class="fa-stack">
-            <span class="arrow_carrot-up"></span>
-        </span>
-    </a>
+    <aside>
+
+    </aside>
+
+    <section>
 
 
-    <h2>Introduzca una contraseña segura</h2>
+        <h2>Introduzca una contraseña segura</h2>
 
-    <label for="pssw">Contraseña:&nbsp;</label>
-    <input type="text" name="pssw" id="pssw">
-    <br />
-    <input type="button" onclick="validar()" value="Enviar">
+        <label for="pssw">Contraseña:&nbsp;</label>
+        <input type="text" name="pssw" id="pssw">
+        <br />
+        <input type="button" onclick="validarPss()" value="Enviar">
 
-    <script type="text/javascript">
-    </script>
-
-
-
-<footer>
-    <div id="rss">
-        <img src="../recursos/icono/rss.jpg" alt="">
-        <p>Drumbeat Blog (RSS feed)</p>
-    </div>
-    <div id="redes">
-        <img id="tw" src="../recursos/icono/twitter.jpg" alt="Twitter">Twitter</br>
-        <img id="fcb" src="../recursos/icono/facebook.jpg" alt="Facebook">Facebook</br>
-        <img id="flc" src="../recursos/icono/flickr.jpg" alt="Flickr">Flickr</br>
-    </div>
-
-    <div id="gim">
-        <img src="../recursos/icono/logotipo-brazo-de-gimnasio2.png" alt="Mozilla">
-        <p>Muscle Up</p>
-        <p>Privacy policy</p>
-        <p>Portion of this content are &copy; 2010 by individual drumbeat.org contributors. Content available under a <span>Creative Commons license</span>.</p>
-    </div>
+        
+    </section>
 
 
-</footer>
+
+    <footer>
+        <div id="rss">
+            <img src="../recursos/icono/rss.jpg" alt="">
+            <p>Drumbeat Blog (RSS feed)</p>
+        </div>
+        <div id="redes">
+            <img id="tw" src="../recursos/icono/twitter.jpg" alt="Twitter">Twitter</br>
+            <img id="fcb" src="../recursos/icono/facebook.jpg" alt="Facebook">Facebook</br>
+            <img id="flc" src="../recursos/icono/flickr.jpg" alt="Flickr">Flickr</br>
+        </div>
+
+        <div id="gim">
+            <img src="../recursos/icono/logotipo-brazo-de-gimnasio2.png" alt="Mozilla">
+            <p>Muscle Up</p>
+            <p>Privacy policy</p>
+            <p>Portion of this content are &copy; 2010 by individual drumbeat.org contributors. Content available under
+                a <span>Creative Commons license</span>.</p>
+        </div>
+
+
+    </footer>
 
 </body>
 
