--- a/Gimnasio/html/galeria.html
+++ b/Gimnasio/html/galeria.html
@@ -41,16 +41,12 @@
         </div>
     </header>
     <hr>
-    
+
 
 
     <section>
 
         <div id="fotoGaleria">
-            <div clas="galeria"></div>
-            <div clas="galeria"></div>
-            <div clas="galeria"></div>
-            <div clas="galeria"></div>
             <div clas="galeria"></div>
             <div clas="galeria"></div>
             <div clas="galeria"></div>
@@ -79,14 +75,15 @@
             <img src="../recursos/icono/logotipo-brazo-de-gimnasio2.png" alt="Mozilla">
             <p>Muscle Up</p>
             <p>Privacy policy</p>
-            <p>Portion of this content are &copy; 2010 by individual drumbeat.org contributors. Content available under a <span>Creative Commons license</span>.</p>
+            <p>Portion of this content are &copy; 2010 by individual drumbeat.org contributors. Content available under
+                a <span>Creative Commons license</span>.</p>
         </div>
 
 
     </footer>
 
 
-   
+
 </body>
 
 </html>
