--- a/Gimnasio/html/login.html
+++ b/Gimnasio/html/login.html
@@ -48,16 +48,12 @@
     </aside>
 
     <section>
-
-
         <h2>Introduzca una contraseña segura</h2>
 
         <label for="pssw">Contraseña:&nbsp;</label>
         <input type="text" name="pssw" id="pssw">
         <br />
         <input type="button" onclick="validarPss()" value="Enviar">
-
-        
     </section>
 
 
@@ -77,8 +73,7 @@
             <img src="../recursos/icono/logotipo-brazo-de-gimnasio2.png" alt="Mozilla">
             <p>Muscle Up</p>
             <p>Privacy policy</p>
-            <p>Portion of this content are &copy; 2010 by individual drumbeat.org contributors. Content available under
-                a <span>Creative Commons license</span>.</p>
+            <p>Portion of this content are &copy; 2010 by individual drumbeat.org contributors. Content available under a <span>Creative Commons license</span>.</p>
         </div>
 
 
