--- a/Gimnasio/html/home.html
+++ b/Gimnasio/html/home.html
@@ -21,21 +21,21 @@
             </div>
         </div>
         <div id="logNav">
-            <div id="login">
+            <div id="login" class="boton">
                 <a href="login.html"> <img src="../recursos/zapatilaGim.PNG" alt="LOGIN"> LOGIN</a>
             </div>
             <nav>
                 <ul id="navPrin">
-                    <li> <a href="../html/home.html">Home</a> </li>
-                    <li>Herramientas
+                    <li class="boton"> <a href="../html/home.html">Home</a> </li>
+                    <li class="boton">Herramientas
                         <ul id="navTools">
-                            <li><a href="../html/imcCalculadora.html">IMC</a></li>
-                            <li><a href="../html/fcmCalculadora.html">FCM</a></li>
+                            <li class="boton"><a href="../html/imcCalculadora.html">IMC</a></li>
+                            <li class="boton"><a href="../html/fcmCalculadora.html">FCM</a></li>
                         </ul>
                     </li>
-                    <li><a href="fisioterapeuta.html">Fisios</a></li>
-                    <li><a href="actividadSala.html">Actividades</a></li>
-                    <li><a href="">Galería</a></li>
+                    <li class="boton"><a href="fisioterapeuta.html">Fisios</a></li>
+                    <li class="boton"><a href="actividadSala.html">Actividades</a></li>
+                    <li class="boton"><a href="">Galería</a></li>
                 </ul>
             </nav>
         </div>
