--- a/Gimnasio/html/home.html
+++ b/Gimnasio/html/home.html
@@ -2,16 +2,18 @@
 <html>
 
 <head>
+    <!--Cargamos el icono, el titulo, el css y el archivo javascript -->
     <link rel="shortcut icon" href="../recursos/logotipo-brazo-de-gimnasio.png">
     <title>Muscle UP</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../css/gimstile.css" />
-
+    <script type="text/javascript" src="../js/gimnasio.js"></script>
 </head>
 
 <body>
-
+    <!--El cuerpo de la página-->
     <header>
+        <!--El header incluye el logo, el nombre, el login y el navegador-->
         <div id="banner">
             <div id="logo">
                 <img src="../recursos/logotipo-brazo-de-gimnasio.png" alt="brazo izquierdo">
@@ -42,24 +44,24 @@
     </header>
 
     <aside>
+        <!--Un aside simple anunciando ofertas-->
 
     </aside>
 
     <section>
+        <!--Zona principal de body. En esta hoja solo tiene el logo y un par de frases motivacionales.-->
 
-
-
-
-
+        <div id="home">
+            <p>Empieza ahora y no pares</p>
+            <p>No dejes para más tarde lo que ya estás haciendo ahora</p>
+        </div>
     </section>
 
-
-
-
     <footer>
+        <!--El pie de la página. Contiene las redes sociales, rss y el anuncio de copyright -->
         <div id="rss">
             <img src="../recursos/icono/rss.jpg" alt="">
-            <p>Drumbeat Blog (RSS feed)</p>
+            <p>Enterate de las novedades (RSS feed)</p>
         </div>
         <div id="redes">
             <img id="tw" src="../recursos/icono/twitter.jpg" alt="Twitter">Twitter</br>
@@ -71,7 +73,8 @@
             <img src="../recursos/icono/logotipo-brazo-de-gimnasio2.png" alt="Mozilla">
             <p>Muscle Up</p>
             <p>Privacy policy</p>
-            <p>Portion of this content are &copy; 2010 by individual drumbeat.org contributors. Content available under a <span>Creative Commons license</span>.</p>
+            <p>Portion of this content are &copy; 2010 by individual drumbeat.org contributors. Content available under
+                a <span>Creative Commons license</span>.</p>
         </div>
 
 
