--- a/Gimnasio/html/home.html
+++ b/Gimnasio/html/home.html
@@ -49,11 +49,33 @@
     </aside>
 
     <section>
-        <!--Zona principal de body. En esta hoja solo tiene el logo y un par de frases motivacionales.-->
+        <!--Zona principal de body. En esta hoja solo tiene el logo un par de frases motivacionales y la galeria.-->
 
         <div id="home">
             <p>Empieza ahora y no pares</p>
             <p>No dejes para más tarde lo que ya estás haciendo ahora</p>
+        </div>
+
+
+        <div id="fotoGaleria">
+            <div clas="galeria">
+                <img src="" alt="">
+            </div>
+            <div clas="galeria">
+                <img src="" alt="">
+            </div>
+            <div clas="galeria"> 
+                <img src="" alt="">
+            </div>
+            <div clas="galeria"> 
+                <img src="" alt="">
+            </div>
+            <div clas="galeria"> 
+                <img src="" alt="">
+            </div>
+            <div clas="galeria"> 
+                <img src="" alt="">
+            </div>
         </div>
     </section>
 
